<resources>
    <string name="app_app_name">android template</string>
    <string name="app_notification_channel_name">Default Channel</string>
    <string name="app_notification_channel_name_desc">Default Channel</string>

    <string name="app_navigation_drawer_open">Open navigation drawer</string>
    <string name="app_navigation_drawer_close">Close navigation drawer</string>
    <string name="app_nav_header_title">Android Studio</string>
    <string name="app_nav_header_subtitle">android.studio@android.com</string>
    <string name="app_nav_header_desc">Navigation header</string>
    <string name="app_action_settings">Settings</string>

    <string name="app_menu_home">Home</string>
    <string name="app_menu_gallery">Gallery</string>
    <string name="app_menu_slideshow">Slideshow</string>
</resources>
