<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.leovp.androidtemplate.ui.home.HomeFragment"
        android:label="@string/app_menu_home"
        tools:layout="@layout/app_fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.leovp.androidtemplate.ui.gallery.GalleryFragment"
        android:label="@string/app_menu_gallery"
        tools:layout="@layout/app_fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.leovp.androidtemplate.ui.slideshow.SlideshowFragment"
        android:label="@string/app_menu_slideshow"
        tools:layout="@layout/app_fragment_slideshow" />
</navigation>
