<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/app_nav_header_height"
    android:background="@drawable/app_side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/app_activity_horizontal_margin"
    android:paddingTop="@dimen/app_activity_vertical_margin_large"
    android:paddingRight="@dimen/app_activity_horizontal_margin"
    android:paddingBottom="@dimen/app_activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageView"
        android:layout_width="64dp"
        android:layout_height="64dp"
        app:shapeAppearanceOverlay="@style/app_roundedImageViewRounded"
        android:contentDescription="@string/app_nav_header_desc"
        app:srcCompat="@drawable/app_user_avatar" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/app_nav_header_vertical_spacing"
        android:text="@string/app_nav_header_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_nav_header_subtitle"
        android:textAppearance="@style/TextAppearance.AppCompat.Small" />
</LinearLayout>
